# yikit

./: .buildinfo  .gitattributes  .gitignore  MANIFEST.in  README.md  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  ruff.toml  search.html  searchindex.js  setup.py  yikit.feature_selection.html  yikit.helpers.html  yikit.html  yikit.logging.html  yikit.metrics.html  yikit.models.html  yikit.visualize.html
.doctrees/: environment.pickle  index.doctree  modules.doctree  yikit.doctree  yikit.feature_selection.doctree  yikit.helpers.doctree  yikit.logging.doctree  yikit.metrics.doctree  yikit.models.doctree  yikit.visualize.doctree
.github/workflows/: CI.yml  docs.yml  release-pypi.yml
_sources/: index.md  modules.rst  yikit.feature_selection.rst  yikit.helpers.rst  yikit.logging.rst  yikit.metrics.rst  yikit.models.rst  yikit.rst  yikit.visualize.rst
_static/: documentation_options.js
docs_src/: conf.py
example/: demo_custom_params.ipynb  demo_ensemble.ipynb  demo_objective.ipynb  example.ipynb  learning_curve.ipynb  simulate.ipynb  wrapper_method.ipynb
examples/: demo_custom_params.ipynb  demo_custom_params.py  demo_ensemble.ipynb  demo_ensemble.py  demo_objective.ipynb  demo_objective.py  filter_method.ipynb  filter_method.py  learning_curve.ipynb  learning_curve.py  simulate.py  wrapper_method.ipynb  wrapper_method.py
feature_selection/: __init__.py  requirements.txt
feature_selection/feature_selection/wrapper_method/src/: wrapper_method.py
feature_selection/wrapper_method/src/: wrapper_method.py
filter_method/: __init__.py  filter_method.py  requirements.txt  setup.py
filter_method/src/: filter_method.py
models/: models.py
my_models/: __init__.py  my_models.py  objective.py
src/yikit/: __init__.py
src/yikit/feature_selection/: __init__.py
src/yikit/metrics/: __init__.py  _ngboost.py
src/yikit/models/: __init__.py  _ensemble.py  _gbdt.py  _linear.py  _mlp.py  _optuna.py  _svm.py  models.py
src/yikit/visualize/: __init__.py  _gbdt.py  _ngboost.py  _optuna.py  _permutation_importance.py  _utils.py  _yyplot.py
tests/: conftest.py  test_boruta.py  test_filtermethod.py  test_models.py  test_optuna.py  test_tools.py  test_visualize.py
tools/: tools.py
wrapper_method/: __init__.py  setup.py  wrapper_method.py
wrapper_method/src/: __init__.py  wrapper_method.py
yi/: __init__.py
yi/tools/: tools.py
yikit/: __init__.py  metrics.py
yikit/feature_selection/: __init__.py  _test.py  _wrapper.py  filter_method.py  wrapper_method.py
yikit/feature_selection/filter_method/src/: filter_method.py
yikit/feature_selection/wrapper_method/src/: wrapper_method.py
yikit/helpers/: __init__.py  _helpers.py
yikit/logging/: __init__.py  _logging.py
yikit/metrics/: __init__.py  _common.py  _ngboost.py
yikit/models/: _test.py  models.py
yikit/tools/: _test.py  test.py  tools.py  visualization.py
yikit/visualize/: __init__.py  _ngboost.py  _optuna.py  _permutation_importance.py  _utils.py
