# https://packaging.python.org/ja/latest/guides/writing-pyproject-toml/
[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "yikit"
dynamic = ["version"]
dependencies = [
    "typing_extensions >= 4.5; python_version < '3.10'",
    "scikit-learn>=0.24.1",
    "numpy",
    "pandas",
    "joblib",
    "scipy",
    "matplotlib",
    "seaborn",
]
requires-python = ">= 3.9"
authors = [{ name = "yu9824" }]
maintainers = [{ name = "yu9824" }]
description = ""
readme = { file = "README.md", content-type = "text/markdown" }
# https://spdx.org/licenses/
license = "Apache-2.0"
license-files = ["LICENSE"] # setuptools>=77.0.3
keywords = []
# https://pypi.org/classifiers/
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.optional-dependencies]
test = ["pytest", "optuna-integration[sklearn]"]
dev = ["build", "jupytext"]
optional = [
    "colorlog",
    "tqdm",
    "ngboost>=0.3.6",
    "lightgbm",
    "Boruta>=0.3",
    "optuna",
    "matplotlib-fontja",
]
docs = [
    "sphinx",
    "myst-parser",
    "myst-nb",
    "sphinx-book-theme",
    "jupyter-sphinx",
]
# gui = ["TkEasyGUI"]

[project.urls]
Homepage = "https://github.com/yu9824/yikit"
Documentation = "https://yu9824.github.io/yikit/"
PyPI = "https://pypi.org/project/yikit/"
Source = "https://github.com/yu9824/yikit"
Tracker = "https://github.com/yu9824/yikit/issues"
"Release Notes" = "https://github.com/yu9824/yikit/releases"
# Changelog = "https://github.com/yu9824/yikit/blob/main/CHANGELOG.md"

# [project.scripts]
# yikit = "yikit.__main__:entrypoint"

# [project.gui-scripts]
# yikit-gui = "yikit:main_gui"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.dynamic]
version = { attr = "yikit.__version__" }

[tool.setuptools.packages.find]
where = ["src/"]
